examples/invalid/void_return.pak
-- INVALID: void_return.pak
-- Error: 'void' is not a type in Pak.
-- Functions with no return value simply omit the '->' entirely.

-- WRONG:
-- fn do_thing() -> void { }
-- fn another() -> () { }

-- CORRECT: omit the return type annotation entirely
fn do_thing() {
    -- no return value
}

fn setup(x: i32) {
    -- does work, returns nothing
    let _ = x
}

entry {
    do_thing()
    setup(42)
}
